Make is a lib crate
This will make it easier to add test in the future

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "stash"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "stash"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1"
 reedline = { git = "https://github.com/nushell/reedline", branch = "main" }
